--- a/Bullet Heaven/Windows/files/Bullet Heaven Windows/Bullet Heaven Windows.vcxproj.filters
+++ b/Bullet Heaven/Windows/files/Bullet Heaven Windows/Bullet Heaven Windows.vcxproj.filters
@@ -15,81 +15,58 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="api-ms-win-crt-runtime-l1-1-0.dll" />
-    <None Include="LOG.SAV" />
-    <None Include="msvcp140.dll" />
-    <None Include="msvcp140d.dll" />
-    <None Include="openal32.dll" />
-    <None Include="sfml-audio-2.dll" />
-    <None Include="sfml-audio-d-2.dll" />
-    <None Include="sfml-graphics-2.dll" />
-    <None Include="sfml-graphics-d-2.dll" />
-    <None Include="sfml-network-2.dll" />
-    <None Include="sfml-network-d-2.dll" />
-    <None Include="sfml-system-2.dll" />
-    <None Include="sfml-system-d-2.dll" />
-    <None Include="sfml-window-2.dll" />
-    <None Include="sfml-window-d-2.dll" />
-    <None Include="ucrtbased.dll" />
-    <None Include="vcruntime140.dll" />
-    <None Include="vcruntime140d.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Bullet.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Explosion.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Explosion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="..\..\..\Linux\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Particle.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Particle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ParticleEmitter.cpp">
+    <ClCompile Include="..\..\..\Linux\src\ParticleEmitter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Shield.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Shield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Star.cpp">
+    <ClCompile Include="..\..\..\Linux\src\Star.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Bullet.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Bullet.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Enemy.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Explosion.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Explosion.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Particle.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Particle.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleEmitter.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\ParticleEmitter.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Player.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Shield.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Shield.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Star.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\Linux\src\Star.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Font Include="INVASION2000.TTF" />
   </ItemGroup>
 </Project>
