Changed makefile for linux

--- a/Bullet Heaven/Linux/src/makefile
+++ b/Bullet Heaven/Linux/src/makefile
@@ -1,13 +1,9 @@
 CXX = g++
 TARGET = BulletHeaven
 
-CXXFLAGS = -std=c++14 -g -O2 -Wall -Wno-reorder
-CPPFLAGS = -I../SFML-2.3.2/include
-LDFLAGS = -L../SFML-2.3.2/lib
+CXXFLAGS = -I../SFML-2.3.2/include -std=c++14 -g -O2 -Wall -Wno-reorder
+LDFLAGS = -L../SFML-2.3.2/lib -L../SFML-2.3.2/lib -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system
 LD_LIBRARY_PATH := ../SFML-2.3.2/lib
-INCLUDES := -I../SFML-2.3.2/include
-LIBS = -L../SFML-2.3.2/lib -lsfml-graphics -lsfml-audio -lsfml-window -lsfml-system
-
 OBJECTS := $(patsubst %.cpp, %.o, $(wildcard *.cpp))
 
 .PHONY: default all clean
@@ -19,7 +15,7 @@ all: default
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) $(INCLUDES) $(LIBS) -o $@ $^
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
 	-rm -rf $(OBJECTS) $(TARGET)
